--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
 
     <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
 
-    <nav class="site-nav">
+    <!--<nav class="site-nav">
       <a href="#" class="menu-icon">
         <svg viewBox="0 0 18 15">
           <path fill="#424242" d="M18,1.484c0,0.82-0.665,1.484-1.484,1.484H1.484C0.665,2.969,0,2.304,0,1.484l0,0C0,0.665,0.665,0,1.484,0 h15.031C17.335,0,18,0.665,18,1.484L18,1.484z"/>
@@ -21,7 +21,21 @@
         {% endfor %}
       </div>
     </nav>
+-->
+    <div class="cate">
+      <ul>
+        {% for cate in categories %}
+        <li>
+            <a class="post-link" href="?c={{ post.title }}">{{ post.title }}</a>
+        </li>
+        {% endfor %}
 
+        <li><a href="#">javascript</a></li>
+        <li>javascript</li>
+        <li>javascript</li>
+      </ul>
+
+    </div>
   </div>
 
 </header>
