--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -35,7 +35,9 @@ ul, ol, dl, figure,
     margin-bottom: $spacing-unit / 2;
 }
 
-
+p {
+    text-indent: 32px;
+}
 
 /**
  * Images
@@ -111,7 +113,7 @@ blockquote {
     color: $grey-color;
     border-left: 4px solid $grey-color-light;
     padding-left: $spacing-unit / 2;
-    font-size: 18px;
+    font-size: 15px;
     letter-spacing: -1px;
     font-style: italic;
 
@@ -127,10 +129,11 @@ blockquote {
  */
 pre,
 code {
-    font-size: 15px;
+    font-size: 14px;
     border: 1px solid $grey-color-light;
     border-radius: 3px;
-    background-color: #eef;
+    background-color: #000;
+    color: white;
 }
 
 code {
