--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -132,8 +132,7 @@ code {
     font-size: 14px;
     border: 1px solid $grey-color-light;
     border-radius: 3px;
-    background-color: #000;
-    color: white;
+    background-color: #eef;
 }
 
 code {
