--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,15 +24,16 @@
 -->
     <div class="cate">
       <ul>
+
+        {%site.categories%}
+
+        {% categories %}
+
         {% for cate in categories %}
         <li>
             <a class="post-link" href="?c={{ post.title }}">{{ post.title }}</a>
         </li>
         {% endfor %}
-
-        <li><a href="#">javascript</a></li>
-        <li>javascript</li>
-        <li>javascript</li>
       </ul>
 
     </div>
