--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,12 +24,9 @@
 -->
     <div class="cate">
       <ul>
-
-        {% for cate in categories %}
-        <li>
-            <a class="post-link" href="?c={{ post.title }}">{{ post.title }}</a>
-        </li>
-        {% endfor %}
+        <li><a class="post-link" href="/cache.html">ª∫¥Ê</a></li>
+        <li><a class="post-link" href="/code.html">±‡¬Î</a></li>
+        <li><a class="post-link" href="/render.html">‰÷»æ</a></li>
       </ul>
 
     </div>
