--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,6 +11,9 @@ layout: default
   <article class="post-content">
     {{ content }}
   </article>
+	<div class="menu" id="leftMenu"></div>
+	<script src='/javascripts/foot.js'></script>
+
 	<!-- JiaThis Button BEGIN -->
 	<div class="jiathis_style_32x32">
 		<a class="jiathis_button_qzone"></a>
