--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,9 +24,9 @@
 -->
     <div class="cate">
       <ul>
-        <li><a class="post-link" href="/cache.html">»º´æ</a></li>
-        <li><a class="post-link" href="/code.html">±àÂë</a></li>
-        <li><a class="post-link" href="/render.html">äÖÈ¾</a></li>
+        <li><a class="post-link" href="/cache.html">ç¼“å­˜</a></li>
+        <li><a class="post-link" href="/code.html">ç¼–ç </a></li>
+        <li><a class="post-link" href="/render.html">æ¸²æŸ“</a></li>
       </ul>
 
     </div>
