--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,7 @@ layout: default
 
 
 	<div class="menu" id="leftMenu"></div>
-	<script src='/javascripts/foot.js'></script>
+	<script src='/javascripts/post.js'></script>
 
 	<!-- JiaThis Button BEGIN -->
 	<div class="jiathis_style_32x32">
