--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,6 +27,7 @@
         <li><a class="post-link" href="/cache.html">缓存</a></li>
         <li><a class="post-link" href="/code.html">编码</a></li>
         <li><a class="post-link" href="/render.html">渲染</a></li>
+        <li><a class="post-link" href="/safe.html">web安全</a></li>
       </ul>
 
     </div>
