--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,6 +28,7 @@
         <li><a class="post-link" href="/code.html">编码</a></li>
         <li><a class="post-link" href="/render.html">渲染</a></li>
         <li><a class="post-link" href="/safe.html">web安全</a></li>
+        <li><a class="post-link" href="/reg.html">正则表达式</a></li>
       </ul>
 
     </div>
