--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -206,6 +206,27 @@ pre {
 }
 
 
+/**
+ * site category
+ */
+.cate {
+    position: absolute;
+    top: 90px;
+    left: -100px;
+    width: 100px;
+    ul {
+        margin: 0;
+        padding: 0;
+
+        li {
+            list-style: none;
+            a{
+                font-size: 0.3em;
+            }
+        }
+    }
+}
+
 .post {
 	position: relative;
 }
