--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,7 +22,7 @@
       </div>
     </nav>
 -->
-    <div class="cate">
+    <div class="cate" id="cate">
       <ul>
         <li><a class="post-link" href="/cache.html">缓存</a></li>
         <li><a class="post-link" href="/code.html">编码</a></li>
