--- a/_includes/header.html
+++ b/_includes/header.html
@@ -29,6 +29,7 @@
         <li><a class="post-link" href="/render.html">渲染</a></li>
         <li><a class="post-link" href="/safe.html">web安全</a></li>
         <li><a class="post-link" href="/reg.html">正则表达式</a></li>
+        <li><a class="post-link" href="/test.html">测试</a></li>
       </ul>
 
     </div>
