--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,4 +15,5 @@ layout: default
 
 	<div class="menu" id="leftMenu"></div>
 	<script src='/javascripts/post.js'></script>
+    <wb:share-button appkey="3813587933" addition="simple" type="button" ralateUid="1770720503"></wb:share-button>
 </div>
