--- a/css/main.scss
+++ b/css/main.scss
@@ -6,7 +6,7 @@
 
 
 // Our variables
-$base-font-family: Consolas,KaiTi,'Helvetica Neue',Helvetica,Arial,sans-serif;
+$base-font-family: Consolas,'微软雅黑','Helvetica Neue',Helvetica,Arial,sans-serif;
 $base-font-size:   16px;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
