--- a/_includes/header.html
+++ b/_includes/header.html
@@ -31,6 +31,7 @@
         <li><a class="post-link" href="/reg.html">正则表达式</a></li>
         <li><a class="post-link" href="/test.html">自动化测试</a></li>
         <li><a class="post-link" href="/tools.html">工具</a></li>
+        <li><a class="post-link" href="/tools.html">SEO</a></li>
       </ul>
 
     </div>
