--- a/_includes/header.html
+++ b/_includes/header.html
@@ -32,6 +32,7 @@
         <li><a class="post-link" href="/test.html">自动化测试</a></li>
         <li><a class="post-link" href="/tools.html">工具</a></li>
         <li><a class="post-link" href="/tools.html">SEO</a></li>
+        <li><a class="post-link" href="/vim.html">Vim</a></li>
       </ul>
 
     </div>
