--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,6 +33,8 @@
         <li><a class="post-link" href="/tools.html">工具</a></li>
         <li><a class="post-link" href="/tools.html">SEO</a></li>
         <li><a class="post-link" href="/vim.html">Vim</a></li>
+        <li><a class="post-link" href="/cmd.html">Vim</a></li>
+        <li><a class="post-link" href="/javascript.html">javascript</a></li>
       </ul>
 
     </div>
